# Final-Project

./: .gitattributes  README.md  pyproject.toml
Data/Clean/: actors.csv  actors_app.csv  characters_sql.csv  crew_sql.csv  individuals_sql.csv  movies.csv  movies_app.csv  movies_sql.csv
Notebooks/: Data_cleaning.ipynb
Notebooks/.ipynb_checkpoints/: SQL_database_upload-checkpoint.ipynb
SQL/: SQL_database_creation.sql  movies_project_database.sql
Streamlit/: Movies.py
Streamlit/.ipynb_checkpoints/: movies-checkpoint.py
Streamlit/pages/: 10_Actors popularity.py  11_Actors ratings.py  12_EDA -  Extra.py  12_Extra - Top Movies.py  13_Conclusions.py  14_The End.py  1_Agenda & Project Overview.py  2_Data.py  3_Movies Dataset.py  4_Actors Dataset.py  5_EDA - Movie Releases.py  6_EDA - Genres popularity.py  7_EDA - Releases & popularity.py  8_Directors popularity.py  9_Directors ratings.py  9_EDA -  Directors ratings.py
Streamlit/pages/.ipynb_checkpoints/: 11_EDA -  Extra-checkpoint.py  1_Agenda & Project Overview-checkpoint.py  5_EDA - Genres popularity-checkpoint.py  7_EDA - Directors popularity-checkpoint.py
Tableau/: EDA.twb
